<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttonbar"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FiltrarPorVeiculo"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spRegistrosFiltroVeiculo"
            android:layout_width="200dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="12dp"
            android:layout_weight="0.17"
            android:background="@color/backgroundColor" />


    </LinearLayout>


    <TextView
        android:id="@+id/tvCorridaCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonbar"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/Veiculo"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonbar"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_toLeftOf="@+id/textView19"
        android:layout_toStartOf="@+id/textView19"
        android:text="@string/Consumo"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/MediaAberturaBorboleta"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/buttonbar"
        android:layout_toLeftOf="@+id/textView5"
        android:layout_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonbar"
        android:layout_centerHorizontal="true"
        android:text="@string/Data"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TCombus"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/buttonbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:id="@+id/lvRegistros"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView9"
        android:layout_marginBottom="55dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/divisoria_dark"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/pbRegistros"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lvRegistros"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp" />


</RelativeLayout>